# uVPN

./: CMakeLists.txt  LICENCE  README.md
cmake/: FindGMP.cmake
src/core/: checksum.c  checksum.h  config.c  config.h  counter.c  counter.h  decrypt.c  decrypt.h  encrypt.c  encrypt.h  global.h  l2_sw.c  l2_sw.h  main.c  tap.c  tap.h  tcp.c  tcp.h
src/lib/: allocator.c  allocator.h  avl.c  avl.h  crc32.c  crc32.h  dns.h  exec.c  exec.h  iniparser.c  iniparser.h  logger.c  logger.h  queue.c  queue.h  random.c  random.h  rsa.c  rsa.h  tap_int.h  tcpc.c  tcpc.h  thpool.c  thpool.h  threads.c  threads.h  twofish.c  twofish.h  utils.c  utils.h
src/lib/bsd/: dns.c  tap_int.c
src/lib/linux/: dns.c  tap_int.c
src/tools/: rsa_gen.c
